--- a/week 2-1-Layouts in JetpackCompose/LayoutsInJetpackCompose/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/LayoutsInJetpackCompose/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
