--- a/week 2-1-Layouts in JetpackCompose/LayoutsInJetpackCompose/app/build.gradle
+++ b/week 2-1-Layouts in JetpackCompose/LayoutsInJetpackCompose/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation 'io.coil-kt:coil-compose:1.3.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
