--- a/week 4-1-Testing in Jetpack Compose/app/build.gradle
+++ b/week 4-1-Testing in Jetpack Compose/app/build.gradle
@@ -114,4 +114,6 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test:$rootProject.composeVersion"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$rootProject.composeVersion"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$rootProject.composeVersion"
+
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
 }
